--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,14 @@ repositories {
 }
 
 dependencies {
+	implementation group: 'com.slack.api', name: 'slack-api-client', version: '1.30.0'
+	implementation("com.slack.api:bolt-jetty:1.30.0")
+	implementation group: 'org.json', name: 'json', version: '20230618'
+	implementation 'org.modelmapper:modelmapper:3.1.1'
+
+
+
+
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
